EES-5958 - responding to PR comments. Updating various parts of the Ruby templated and auto-generated docs where indicators was still marked as "required".
