# src/GovUk.Education.ExploreEducationStatistics.Public.Data.Api/Requests/DataSetGetQueryRequest.cs
@@ -33,10 +33,11 @@ public record DataSetGetQueryRequest
 
     /// <summary>
     /// The IDs of indicators to return values for.
-    /// Omitting this parameter will select all indicators.
+    /// 
+    /// Omitting this parameter will return values for all indicators.
     /// </summary>
     [FromQuery, QuerySeparator]
-    public required IReadOnlyList<string>? Indicators { get; init; }
+    public IReadOnlyList<string>? Indicators { get; init; }
 
     /// <summary>
     /// The sorts to apply to the results. Sorts at the start of the
@@ -88,9 +89,14 @@ public record DataSetGetQueryRequest
                 .SetValidator(new DataSetGetQueryTimePeriods.Validator()!)
                 .When(q => q.TimePeriods is not null);
 
-            RuleForEach(q => q.Indicators)
-                .NotEmpty()
-                .MaximumLength(40);
+            When(q => q.Indicators is not null, () =>
+            {
+                RuleFor(q => q.Indicators)
+                    .NotEmpty();
+                RuleForEach(q => q.Indicators)
+                    .NotEmpty()
+                    .MaximumLength(40);
+            });
 
             When(q => q.Sorts is not null, () =>
             {
