# src/explore-education-statistics-api-docs/source/openapi-v1.json
@@ -171,7 +171,7 @@
           "DataSets"
         ],
         "summary": "Query a data set (GET)",
-        "description": "Query a data set using a `GET` request, returning the filtered results.\n            \nNote that there is a `POST` variant of this endpoint which provides a more complete set\nof querying functionality. The `GET` variant is only recommended for initial exploratory\ntesting or simple queries that do not need advanced functionality.\n            \nUnlike the `POST` variant, this endpoint does not allow condition clauses (`and`, `or`, `not`)\nand consequently cannot express more complex queries. Use the `POST` variant instead for these\ntypes of queries.\n            \n## Indicators\n            \nThe `indicators` query parameter is required and **at least one** indicator must be specified.\n            \nEach indicator should be a string containing the indicator ID e.g. `4xbOu`, `8g1RI`.\n            \n## Filters\n            \nThe `filters` query parameter is used to filter by other filter options (not locations,\ngeographic levels or time periods).\n            \nEach filter should be a string containing the required filter option ID e.g. `z4FQE`, `DcQeg`.\n            \n## Geographic levels\n            \nThe `geographicLevels` query parameter is used to filter results by geographic level.\n            \nThe geographic levels are specified as codes, and can be one of the following:\n            \n- `EDA` - English devolved area\n- `INST` - Institution\n- `LA` - Local authority\n- `LAD` - Local authority district\n- `LEP` - Local enterprise partnership\n- `LSIP` - Local skills improvement plan area\n- `MCA` - Mayoral combined authority\n- `MAT` - MAT\n- `NAT` - National\n- `OA` - Opportunity area\n- `PA` - Planning area\n- `PCON` - Parliamentary constituency\n- `PROV` - Provider\n- `REG` - Regional\n- `RSC` - RSC region\n- `SCH` - School\n- `SPON` - Sponsor\n- `WARD` - Ward\n            \n## Locations\n            \nThe `locations` query parameter is used to filter results by location.\n            \nThe locations should be strings formatted like `{level}|{property}|{value}` where:\n            \n- `{level}` is the location's level code (e.g. `NAT`, `REG`, `LA`)\n- `{property}` is the name of the identifying property to match on (e.g. `id, `code`, `urn`)\n- `{value}` is the value for the property to match\n            \nAn ID or a code can be used to identify a location, with the following differences:\n            \n- IDs only match a **single location**\n- Codes may match **multiple locations**\n            \nWhilst codes are generally unique to a single location, they can be used for multiple locations.\nThis may match more results than you expect so it's recommended to use IDs where possible.\n            \n### Examples\n            \n- `LA|code|E08000019` matches any local authority with code `E08000019`\n- `REG|id|6bQgZ` matches any region with ID `6bQgZ`\n- `SCH|urn|140821` matches any school with URN `140821`\n            \n## Time periods\n            \nThe `timePeriods` query parameter is used to filter results by time period.\n            \nThe time periods should be strings formatted like `{period}|{code}` where:\n            \n- `period` is the time period or range (e.g. `2020` or `2020/2021`)\n- `code` is the code identifying the time period type (e.g. `AY`, `CY`, `M1`, `W20`)\n            \nThe `period` should be a single year like `2020`, or a range like `2020/2021`.\nCurrently, only years (or year ranges) are supported.\n            \nSome time period types span two years e.g. financial year part 2 (`P2`), or may fall in a\nlatter year e.g. academic year summer term (`T3`). For these types, a singular year `period`\nlike `2020` is considered as `2020/2021`.\n            \nFor example, a `period` value of `2020` is applicable to the following time periods:\n            \n- 2020 calendar year\n- 2020/2021 academic year\n- 2020/2021 financial year part 2 (October to March)\n- 2020/2021 academic year's summer term\n            \nIf you wish to be more explicit, you may use a range for the `period` e.g. `2020/2021`.\nHowever, a range cannot be used with time period types which only span a single year,\nfor example, `2020/21` cannot be used with `CY`, `M` or `W` codes.\n            \n### Examples\n            \n- `2020|AY` is the 2020/21 academic year\n- `2021|FY` is the 2021/22 financial year\n- `2020|T3` is the 2020/21 academic year's summer term\n- `2020|P2` is the 2020/21 financial year part 2 (October to March)\n- `2020|CY` is the 2020 calendar year\n- `2020|W32` is 2020 week 32\n- `2020/2021|AY` is the 2020/21 academic year\n- `2021/2022|FY` is the 2021/22 financial year\n            \n## Sorts\n            \nThe `sorts` query parameter is used to sort the results.\n            \nSorts are applied in the order they are provided and should be strings\nformatted like `{field}|{direction}` where:\n            \n- `field` is the name of the field to sort e.g. `timePeriod`\n- `direction` is the direction to sort in e.g. ascending (`Asc`) or descending (`Desc`)\n            \nThe `field` can be one of the following:\n            \n- `timePeriod` to sort by time period\n- `geographicLevel` to sort by the geographic level of the data\n- `location|{level}` to sort by locations in a geographic level where `{level}` is the level code (e.g. `REG`, `LA`)\n- `filter|{id}` to sort by the options in a filter where `{id}` is the filter ID (e.g. `3RxWP`)\n- `indicator|{id}` to sort by the values in a indicator where `{id}` is the indicator ID (e.g. `6VfPgZ`)\n            \n### Examples\n            \n- `timePeriod|Desc` sorts by time period in descending order\n- `geographicLevel|Asc` sorts by geographic level in ascending order\n- `location|REG|Asc` sorts by regions in ascending order\n- `filter|3RxWP|Desc` sorts by options in filter `3RxWP` in descending order\n- `indicator|7a1dk|Asc` sorts by values in indicator `7a1dk` in ascending order",
+        "description": "Query a data set using a `GET` request, returning the filtered results.\n            \nNote that there is a `POST` variant of this endpoint which provides a more complete set\nof querying functionality. The `GET` variant is only recommended for initial exploratory\ntesting or simple queries that do not need advanced functionality.\n            \nUnlike the `POST` variant, this endpoint does not allow condition clauses (`and`, `or`, `not`)\nand consequently cannot express more complex queries. Use the `POST` variant instead for these\ntypes of queries.\n            \n## Indicators\n            \nThe `indicators` query parameter is used to include only specific values in the data set\nresults.\n            \nEach indicator should be a string containing the indicator ID e.g. `4xbOu`, `8g1RI`.\n            \nOmitting the `indicators` parameter will return values for all indicators.\n\n## Filters\n            \nThe `filters` query parameter is used to filter by other filter options (not locations,\ngeographic levels or time periods).\n            \nEach filter should be a string containing the required filter option ID e.g. `z4FQE`, `DcQeg`.\n            \n## Geographic levels\n            \nThe `geographicLevels` query parameter is used to filter results by geographic level.\n            \nThe geographic levels are specified as codes, and can be one of the following:\n            \n- `EDA` - English devolved area\n- `INST` - Institution\n- `LA` - Local authority\n- `LAD` - Local authority district\n- `LEP` - Local enterprise partnership\n- `LSIP` - Local skills improvement plan area\n- `MCA` - Mayoral combined authority\n- `MAT` - MAT\n- `NAT` - National\n- `OA` - Opportunity area\n- `PA` - Planning area\n- `PCON` - Parliamentary constituency\n- `PROV` - Provider\n- `REG` - Regional\n- `RSC` - RSC region\n- `SCH` - School\n- `SPON` - Sponsor\n- `WARD` - Ward\n            \n## Locations\n            \nThe `locations` query parameter is used to filter results by location.\n            \nThe locations should be strings formatted like `{level}|{property}|{value}` where:\n            \n- `{level}` is the location's level code (e.g. `NAT`, `REG`, `LA`)\n- `{property}` is the name of the identifying property to match on (e.g. `id, `code`, `urn`)\n- `{value}` is the value for the property to match\n            \nAn ID or a code can be used to identify a location, with the following differences:\n            \n- IDs only match a **single location**\n- Codes may match **multiple locations**\n            \nWhilst codes are generally unique to a single location, they can be used for multiple locations.\nThis may match more results than you expect so it's recommended to use IDs where possible.\n            \n### Examples\n            \n- `LA|code|E08000019` matches any local authority with code `E08000019`\n- `REG|id|6bQgZ` matches any region with ID `6bQgZ`\n- `SCH|urn|140821` matches any school with URN `140821`\n            \n## Time periods\n            \nThe `timePeriods` query parameter is used to filter results by time period.\n            \nThe time periods should be strings formatted like `{period}|{code}` where:\n            \n- `period` is the time period or range (e.g. `2020` or `2020/2021`)\n- `code` is the code identifying the time period type (e.g. `AY`, `CY`, `M1`, `W20`)\n            \nThe `period` should be a single year like `2020`, or a range like `2020/2021`.\nCurrently, only years (or year ranges) are supported.\n            \nSome time period types span two years e.g. financial year part 2 (`P2`), or may fall in a\nlatter year e.g. academic year summer term (`T3`). For these types, a singular year `period`\nlike `2020` is considered as `2020/2021`.\n            \nFor example, a `period` value of `2020` is applicable to the following time periods:\n            \n- 2020 calendar year\n- 2020/2021 academic year\n- 2020/2021 financial year part 2 (October to March)\n- 2020/2021 academic year's summer term\n            \nIf you wish to be more explicit, you may use a range for the `period` e.g. `2020/2021`.\nHowever, a range cannot be used with time period types which only span a single year,\nfor example, `2020/21` cannot be used with `CY`, `M` or `W` codes.\n            \n### Examples\n            \n- `2020|AY` is the 2020/21 academic year\n- `2021|FY` is the 2021/22 financial year\n- `2020|T3` is the 2020/21 academic year's summer term\n- `2020|P2` is the 2020/21 financial year part 2 (October to March)\n- `2020|CY` is the 2020 calendar year\n- `2020|W32` is 2020 week 32\n- `2020/2021|AY` is the 2020/21 academic year\n- `2021/2022|FY` is the 2021/22 financial year\n            \n## Sorts\n            \nThe `sorts` query parameter is used to sort the results.\n            \nSorts are applied in the order they are provided and should be strings\nformatted like `{field}|{direction}` where:\n            \n- `field` is the name of the field to sort e.g. `timePeriod`\n- `direction` is the direction to sort in e.g. ascending (`Asc`) or descending (`Desc`)\n            \nThe `field` can be one of the following:\n            \n- `timePeriod` to sort by time period\n- `geographicLevel` to sort by the geographic level of the data\n- `location|{level}` to sort by locations in a geographic level where `{level}` is the level code (e.g. `REG`, `LA`)\n- `filter|{id}` to sort by the options in a filter where `{id}` is the filter ID (e.g. `3RxWP`)\n- `indicator|{id}` to sort by the values in a indicator where `{id}` is the indicator ID (e.g. `6VfPgZ`)\n            \n### Examples\n            \n- `timePeriod|Desc` sorts by time period in descending order\n- `geographicLevel|Asc` sorts by geographic level in ascending order\n- `location|REG|Asc` sorts by regions in ascending order\n- `filter|3RxWP|Desc` sorts by options in filter `3RxWP` in descending order\n- `indicator|7a1dk|Asc` sorts by values in indicator `7a1dk` in ascending order",
         "operationId": "QueryDataSetGet",
         "parameters": [
           {
@@ -481,14 +481,13 @@
           {
             "name": "indicators",
             "in": "query",
-            "description": "The IDs of indicators to return values for.\nOmitting this parameter will select all indicators.",
-            "required": true,
+            "description": "The IDs of indicators to return values for.\n\nOmitting this parameter will return values for all indicators.",
             "schema": {
               "type": "array",
               "items": {
                 "type": "string"
               },
-              "description": "The IDs of indicators to return values for.\nOmitting this parameter will select all indicators.",
+              "description": "The IDs of indicators to return values for.\n\nOmitting this parameter will return values for all indicators.",
               "nullable": true
             }
           },
@@ -591,7 +590,7 @@
           "DataSets"
         ],
         "summary": "Query a data set (POST)",
-        "description": "Query a data set using a `POST` request, returning the filtered results.\n            \nNote that for simpler queries or exploratory testing, there is also GET variant of this endpoint\nonly handles a smaller subset of querying functionality. However, for most use-cases,\nthis endpoint is recommended as it provides the complete set of functionality.\n            \nUnlike the `GET` endpoint, the `POST` endpoint allows condition criteria (`and`, `or`, `not`)\nand consequently can express more complex queries.\n            \nA `POST` request without a body is allowed but must include a `application/json` Content-Type\nheader. A `POST` request without a body will return a paginated set of all results.",
+        "description": "Query a data set using a `POST` request, returning the filtered results.\n            \nNote that for simpler queries or exploratory testing, there is also GET variant of this endpoint\nonly handles a smaller subset of querying functionality. However, for most use-cases,\nthis endpoint is recommended as it provides the complete set of functionality.\n            \nUnlike the `GET` endpoint, the `POST` endpoint allows condition criteria (`and`, `or`, `not`)\nand consequently can express more complex queries.\n            \nA `POST` request without a body will return a paginated set of unfiltered results and will include\nvalues for all indicators.\n            \nA `Content-Type` request header of `application/json` is required.",
         "operationId": "QueryDataSetPost",
         "parameters": [
           {
@@ -1353,9 +1352,6 @@
         "description": "The location option criteria to filter results by in a data set GET query.\n            \nThe results can be matched by either the location option's ID or a code.\nNote the following differences:\n            \n- IDs only match a **single location**\n- Codes may match **multiple locations**\n            \nWhilst codes are generally unique to a single location, they can be\nused for multiple locations. This may match more results than you\nexpect so it's recommended to use IDs where possible."
       },
       "DataSetGetQueryRequest": {
-        "required": [
-          "indicators"
-        ],
         "type": "object",
         "properties": {
           "filters": {
@@ -1397,11 +1393,9 @@
           "indicators": {
             "type": "array",
             "items": {
-              "maxLength": 40,
-              "minLength": 1,
               "type": "string"
             },
-            "description": "The IDs of indicators to return values for.\nOmitting this parameter will select all indicators.",
+            "description": "The IDs of indicators to return values for.\n\nOmitting this parameter will return values for all indicators.",
             "nullable": true
           },
           "sorts": {
@@ -2444,7 +2438,7 @@
               "minLength": 1,
               "type": "string"
             },
-            "description": "The IDs of indicators to return values for.\nOmitting this parameter will select all indicators.",
+            "description": "The IDs of indicators to return values for.\n\nOmitting this parameter will return values for all indicators.",
             "nullable": true,
             "example": [
               "C2ySJ",
